--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <section class="section-hemisphere">
         <h3 class="choice-title">Select a hemisphere</h3> 
         <div class="checkboxes">
-            <input type="radio" name="hemisphere" id="north" onclick="onWhichHemisphere()">
+            <input type="radio" name="hemisphere" id="north" onclick="onWhichHemisphere();clearInterval(intervalA)">
             <label for="north">North</label>
-            <input type="radio" name="hemisphere" id="south" onclick="onWhichHemisphere()">
+            <input type="radio" name="hemisphere" id="south" onclick="onWhichHemisphere();clearInterval(intervalA)">
             <label for="south">South</label>
         </div>
         </section>
         <section class="section-seasons">
             <h3 class="choice-title">Select a Season</h3>
             <div class="btn-selector">
-                <button onclick="season_chosen(1), countdown(summerSolstice)" class="btn btn-summer">Summer</button>
-                <button onclick="season_chosen(2), countdown(fallEquinox)" class="btn fall-btn">Fall</button>
-                <button onclick="season_chosen(3), countdown(winterSolstice)" class="btn winter-btn">Winter</button>
-                <button onclick="season_chosen(4), countdown(springEquinox)" class="btn spring-btn">Spring</button>
+                <button onclick="season_chosen(1); cleanCountdown (); summerCountdown()" class="btn btn-summer">Summer</button>
+                <button onclick="season_chosen(2); cleanCountdown (); fallCountdown()" class="btn fall-btn">Fall</button>
+                <button onclick="season_chosen(3); cleanCountdown (); winterCountdown()" class="btn winter-btn">Winter</button>
+                <button onclick="season_chosen(4); cleanCountdown (); springCountdown()" class="btn spring-btn">Spring</button>
             </div>
         </section>
         <section class="img-content">
@@ -42,7 +42,7 @@
                 <img src="./images/spring.jpg">
             </div>
         </section>
-        <section class="countdown-container">
+        <section id="count-container" class="countdown-container">
             <div class="countdown-el days-c">
                 <p class="big-text" id="days"></p>
                 <span>Days</span>
