Fix button onClick

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <section class="section-seasons">
             <h3 class="choice-title">Select a Season</h3>
             <div class="btn-selector">
-                <button onclick="season_chosen(1); cleanCountdown (); summerCountdown()" class="btn btn-summer">Summer</button>
-                <button onclick="season_chosen(2); cleanCountdown (); fallCountdown()" class="btn fall-btn">Fall</button>
-                <button onclick="season_chosen(3); cleanCountdown (); winterCountdown()" class="btn winter-btn">Winter</button>
-                <button onclick="season_chosen(4); cleanCountdown (); springCountdown()" class="btn spring-btn">Spring</button>
+                <button onclick="season_chosen(1);summerCountdown()" class="btn btn-summer">Summer</button>
+                <button onclick="season_chosen(2);fallCountdown()" class="btn fall-btn">Fall</button>
+                <button onclick="season_chosen(3);winterCountdown()" class="btn winter-btn">Winter</button>
+                <button onclick="season_chosen(4);springCountdown()" class="btn spring-btn">Spring</button>
             </div>
         </section>
         <section class="img-content">
