Responsive Design Made

--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>Made by Alex Fernández.</p>
+    </footer>
 </body>
 </html>
